[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Spikes.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/ARCADE_N.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 162, 64.0002 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/ColorRect"]

[node name="Labels" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Labels"]
margin_left = -156.954
margin_top = -45.3664
margin_right = 91.0462
margin_bottom = -24.3664
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Use the arrow keys left & right
to control your slime"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Labels"]
margin_left = 271.046
margin_top = -57.3664
margin_right = 567.046
margin_bottom = -36.3664
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hold the up arrow to
charge up a jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Labels"]
margin_left = 627.046
margin_top = -96.3664
margin_right = 923.046
margin_bottom = -75.3664
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The longer you charge
the higher the jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Labels"]
margin_left = 837.046
margin_top = -334.366
margin_right = 1133.05
margin_bottom = -313.366
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "If you die a new slime spawns
at the last safe position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Labels"]
margin_left = 1138.05
margin_top = -335.366
margin_right = 1450.05
margin_bottom = -314.366
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Use your past incarnations to continue
on your quest for freedom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Labels"]
margin_left = 2643.25
margin_top = 328.416
margin_right = 2955.25
margin_bottom = 349.416
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "To freedom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="Labels"]
margin_left = 2733.83
margin_top = 330.268
margin_right = 3045.83
margin_bottom = 351.268
rect_rotation = 45.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "--------->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentPlayer" type="Node2D" parent="."]

[node name="Player" parent="CurrentPlayer" instance=ExtResource( 1 )]
position = Vector2( -0.257, 7.995 )

[node name="DeadPlayers" type="Node2D" parent="."]

[node name="Platform" parent="." instance=ExtResource( 2 )]
collision_layer = 513
collision_mask = 513
tile_data = PoolIntArray( -2097109, 0, 0, -2097108, 0, 0, -2097107, 0, 0, -2097106, 0, 0, -2097105, 0, 0, -2097104, 0, 0, -2097103, 0, 0, -2097102, 0, 0, -2097101, 0, 0, -2097100, 0, 0, -2097099, 0, 0, -2097098, 0, 0, -2097097, 0, 0, -2097096, 0, 0, -2097095, 0, 0, -2097094, 0, 0, -2097093, 0, 0, -2097092, 0, 0, -2097091, 0, 0, -2097090, 0, 0, -2097089, 0, 0, -2097088, 0, 0, -2097087, 0, 0, -2097086, 0, 0, -2097085, 0, 0, -2097084, 0, 0, -2097083, 0, 0, -2097082, 0, 0, -2097081, 0, 0, -2097080, 0, 0, -2097079, 0, 0, -2097078, 0, 0, -2097077, 0, 0, -2097076, 0, 0, -2097075, 0, 0, -2097074, 0, 0, -2097073, 0, 0, -2097072, 0, 0, -2097071, 0, 0, -2097070, 0, 0, -2097069, 0, 0, -2097068, 0, 0, -2097067, 0, 0, -2097066, 0, 0, -2097065, 0, 0, -2097064, 0, 0, -2097063, 0, 0, -2097062, 0, 0, -2097061, 0, 0, -2097060, 0, 0, -2097059, 0, 0, -2097058, 0, 0, -2097057, 0, 0, -2097056, 0, 0, -2097055, 0, 0, -2097054, 0, 0, -2097053, 0, 0, -2097052, 0, 0, -2097051, 0, 0, -2097050, 0, 0, -2097049, 0, 0, -2097048, 0, 0, -2097047, 0, 0, -2097046, 0, 0, -2097045, 0, 0, -2097044, 0, 0, -2097043, 0, 0, -2097042, 0, 0, -2097041, 0, 0, -2097040, 0, 0, -2031573, 0, 0, -2031504, 0, 0, -1966037, 0, 0, -1965968, 0, 0, -1900501, 0, 0, -1900432, 0, 0, -1834965, 0, 0, -1834896, 0, 0, -1769429, 0, 0, -1769360, 0, 0, -1703893, 0, 0, -1703824, 0, 0, -1638357, 0, 0, -1638288, 0, 0, -1572821, 0, 0, -1572752, 0, 0, -1507285, 0, 0, -1507216, 0, 0, -1441763, 0, 0, -1441762, 0, 0, -1441761, 0, 0, -1441760, 0, 0, -1441759, 0, 0, -1441758, 0, 0, -1441757, 0, 0, -1441756, 0, 0, -1441755, 0, 0, -1441754, 0, 0, -1441753, 0, 0, -1441752, 0, 0, -1441751, 0, 0, -1441750, 0, 0, -1441749, 0, 0, -1441680, 0, 0, -1376227, 0, 0, -1376144, 0, 0, -1310691, 0, 0, -1310608, 0, 0, -1245155, 0, 0, -1245072, 0, 0, -1179619, 0, 0, -1179536, 0, 0, -1114083, 0, 0, -1114060, 0, 0, -1114059, 0, 0, -1114058, 0, 0, -1114057, 0, 0, -1114056, 0, 0, -1114055, 0, 0, -1114054, 0, 0, -1114053, 0, 0, -1114052, 0, 0, -1114051, 0, 0, -1114050, 0, 0, -1114049, 0, 0, -1114048, 0, 0, -1114047, 0, 0, -1114046, 0, 0, -1114045, 0, 0, -1114044, 0, 0, -1114043, 0, 0, -1114020, 0, 0, -1114019, 0, 0, -1114018, 0, 0, -1114017, 0, 0, -1114016, 0, 0, -1114015, 0, 0, -1114014, 0, 0, -1114000, 0, 0, -983053, 0, 0, -983052, 0, 0, -983051, 0, 0, -983050, 0, 0, -983049, 0, 0, -983048, 0, 0, -983047, 0, 0, -983046, 0, 0, -983045, 0, 0, -983044, 0, 0, -983043, 0, 0, -983042, 0, 0, -983041, 0, 0, -1048576, 0, 0, -1048575, 0, 0, -1048574, 0, 0, -1048573, 0, 0, -1048572, 0, 0, -1048571, 0, 0, -1048570, 0, 0, -1048569, 0, 0, -1048568, 0, 0, -1048567, 0, 0, -1048566, 0, 0, -1048565, 0, 0, -1048564, 0, 0, -1048563, 0, 0, -1048562, 0, 0, -1048561, 0, 0, -1048560, 0, 0, -1048559, 0, 0, -1048558, 0, 0, -1048557, 0, 0, -1048556, 0, 0, -1048555, 0, 0, -1048554, 0, 0, -1048553, 0, 0, -1048552, 0, 0, -1048551, 0, 0, -1048550, 0, 0, -1048549, 0, 0, -1048548, 0, 0, -1048547, 0, 0, -1048524, 0, 0, -1048507, 0, 0, -1048484, 0, 0, -1048478, 0, 0, -1048464, 0, 0, -917517, 0, 0, -982988, 0, 0, -982971, 0, 0, -982970, 0, 0, -982969, 0, 0, -982968, 0, 0, -982967, 0, 0, -982966, 0, 0, -982965, 0, 0, -982964, 0, 0, -982963, 0, 0, -982962, 0, 0, -982961, 0, 0, -982960, 0, 0, -982959, 0, 0, -982958, 0, 0, -982957, 0, 0, -982956, 0, 0, -982955, 0, 0, -982954, 0, 0, -982953, 0, 0, -982952, 0, 0, -982951, 0, 0, -982950, 0, 0, -982949, 0, 0, -982948, 0, 0, -982942, 0, 0, -982928, 0, 0, -851981, 0, 0, -917452, 0, 0, -917406, 0, 0, -917392, 0, 0, -786445, 0, 0, -851916, 0, 0, -851870, 0, 0, -851856, 0, 0, -720909, 0, 0, -786380, 0, 0, -786334, 0, 0, -786320, 0, 0, -655373, 0, 0, -720844, 0, 0, -720798, 0, 0, -720784, 0, 0, -589837, 0, 0, -655308, 0, 0, -655262, 0, 0, -655248, 0, 0, -524301, 0, 0, -589772, 0, 0, -589726, 0, 0, -589712, 0, 0, -458765, 0, 0, -524236, 0, 0, -524190, 0, 0, -524176, 0, 0, -393229, 0, 0, -458700, 0, 0, -458654, 0, 0, -458640, 0, 0, -327693, 0, 0, -393164, 0, 0, -393118, 0, 0, -393104, 0, 0, -262157, 0, 0, -327628, 0, 0, -327582, 0, 0, -327568, 0, 0, -196621, 0, 0, -262092, 0, 0, -262046, 0, 0, -262032, 0, 0, -131085, 0, 0, -196573, 0, 0, -196572, 0, 0, -196571, 0, 0, -196570, 0, 0, -196569, 0, 0, -196568, 0, 0, -196567, 0, 0, -196566, 0, 0, -196565, 0, 0, -196564, 0, 0, -196563, 0, 0, -196562, 0, 0, -196561, 0, 0, -196560, 0, 0, -196559, 0, 0, -196558, 0, 0, -196557, 0, 0, -196556, 0, 0, -196510, 0, 0, -196496, 0, 0, -65549, 0, 0, -131037, 0, 0, -130974, 0, 0, -130960, 0, 0, -13, 0, 0, -65501, 0, 0, -65438, 0, 0, -65424, 0, 0, 65523, 0, 0, 35, 0, 0, 98, 0, 0, 112, 0, 0, 131059, 0, 0, 131060, 0, 0, 131061, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 65634, 0, 0, 65648, 0, 0, 131170, 0, 0, 131184, 0, 0, 196706, 0, 0, 196720, 0, 0, 262242, 0, 0, 262256, 0, 0, 327778, 0, 0, 327792, 0, 0, 393314, 0, 0, 393328, 0, 0, 458850, 0, 0, 458864, 0, 0, 524386, 0, 0, 524400, 0, 0, 589922, 0, 0, 589936, 0, 0, 655458, 0, 0, 655472, 0, 0, 720994, 0, 0, 721008, 0, 0, 786530, 0, 0, 786544, 0, 0, 852066, 0, 0, 852080, 0, 0, 852117, 0, 0, 852118, 0, 0, 852119, 0, 0, 852120, 0, 0, 852121, 0, 0, 852122, 0, 0, 852123, 0, 0, 852124, 0, 0, 852125, 0, 0, 852126, 0, 0, 852127, 0, 0, 852128, 0, 0, 852129, 0, 0, 852130, 0, 0, 852131, 0, 0, 852132, 0, 0, 852133, 0, 0, 852134, 0, 0, 852135, 0, 0, 852136, 0, 0, 852137, 0, 0, 852138, 0, 0, 852139, 0, 0, 852140, 0, 0, 852141, 0, 0, 852142, 0, 0, 852143, 0, 0, 852144, 0, 0, 852145, 0, 0, 852146, 0, 0, 852147, 0, 0, 852148, 0, 0, 852149, 0, 0, 852150, 0, 0, 852151, 0, 0, 852152, 0, 0, 852153, 0, 0, 852154, 0, 0, 852155, 0, 0, 852156, 0, 0, 917602, 0, 0, 917616, 0, 0, 917653, 0, 0, 917692, 0, 0, 983138, 0, 0, 983152, 0, 0, 983189, 0, 0, 983228, 0, 0, 1048674, 0, 0, 1048688, 0, 0, 1048725, 0, 0, 1048764, 0, 0, 1114210, 0, 0, 1114224, 0, 0, 1114261, 0, 0, 1114300, 0, 0, 1179746, 0, 0, 1179760, 0, 0, 1179797, 0, 0, 1179836, 0, 0, 1245282, 0, 0, 1245296, 0, 0, 1245333, 0, 0, 1245372, 0, 0, 1310818, 0, 0, 1310832, 0, 0, 1310869, 0, 0, 1310908, 0, 0, 1376354, 0, 0, 1376368, 0, 0, 1376405, 0, 0, 1376444, 0, 0, 1441890, 0, 0, 1441904, 0, 0, 1441927, 0, 0, 1441928, 0, 0, 1441929, 0, 0, 1441930, 0, 0, 1441931, 0, 0, 1441932, 0, 0, 1441933, 0, 0, 1441934, 0, 0, 1441935, 0, 0, 1441936, 0, 0, 1441937, 0, 0, 1441938, 0, 0, 1441939, 0, 0, 1441940, 0, 0, 1441941, 0, 0, 1441980, 0, 0, 1507426, 0, 0, 1507440, 0, 0, 1507463, 0, 0, 1507516, 0, 0, 1572962, 0, 0, 1572976, 0, 0, 1572999, 0, 0, 1573052, 0, 0, 1638498, 0, 0, 1638512, 0, 0, 1638535, 0, 0, 1638563, 0, 0, 1638564, 0, 0, 1638565, 0, 0, 1638566, 0, 0, 1638567, 0, 0, 1638568, 0, 0, 1638569, 0, 0, 1638570, 0, 0, 1638571, 0, 0, 1638572, 0, 0, 1638573, 0, 0, 1638574, 0, 0, 1638588, 0, 0, 1704034, 0, 0, 1704048, 0, 0, 1704071, 0, 0, 1704077, 0, 0, 1704078, 0, 0, 1704079, 0, 0, 1704080, 0, 0, 1704099, 0, 0, 1704110, 0, 0, 1704124, 0, 0, 1769570, 0, 0, 1769584, 0, 0, 1769607, 0, 0, 1769613, 0, 0, 1769614, 0, 0, 1769615, 0, 0, 1769616, 0, 0, 1769635, 0, 0, 1769646, 0, 0, 1769660, 0, 0, 1835106, 0, 0, 1835120, 0, 0, 1835143, 0, 0, 1835149, 0, 0, 1835150, 0, 0, 1835151, 0, 0, 1835152, 0, 0, 1835171, 0, 0, 1835182, 0, 0, 1835196, 0, 0, 1900642, 0, 0, 1900656, 0, 0, 1900679, 0, 0, 1900685, 0, 0, 1900686, 0, 0, 1900687, 0, 0, 1900688, 0, 0, 1900707, 0, 0, 1900718, 0, 0, 1900732, 0, 0, 1966178, 0, 0, 1966192, 0, 0, 1966215, 0, 0, 1966221, 0, 0, 1966222, 0, 0, 1966223, 0, 0, 1966224, 0, 0, 1966243, 0, 0, 1966254, 0, 0, 1966255, 0, 0, 1966256, 0, 0, 1966257, 0, 0, 1966258, 0, 0, 1966259, 0, 0, 1966260, 0, 0, 1966261, 0, 0, 1966268, 0, 0, 2031714, 0, 0, 2031728, 0, 0, 2031751, 0, 0, 2031757, 0, 0, 2031758, 0, 0, 2031759, 0, 0, 2031760, 0, 0, 2031779, 0, 0, 2031790, 0, 0, 2031804, 0, 0, 2097250, 0, 0, 2097264, 0, 0, 2097271, 0, 0, 2097272, 0, 0, 2097273, 0, 0, 2097274, 0, 0, 2097275, 0, 0, 2097276, 0, 0, 2097277, 0, 0, 2097278, 0, 0, 2097279, 0, 0, 2097280, 0, 0, 2097281, 0, 0, 2097282, 0, 0, 2097283, 0, 0, 2097284, 0, 0, 2097285, 0, 0, 2097286, 0, 0, 2097287, 0, 0, 2097288, 0, 0, 2097289, 0, 0, 2097293, 0, 0, 2097294, 0, 0, 2097295, 0, 0, 2097296, 0, 0, 2097315, 0, 0, 2097326, 0, 0, 2097340, 0, 0, 2162786, 0, 0, 2162800, 0, 0, 2162807, 0, 0, 2162822, 0, 0, 2162823, 0, 0, 2162824, 0, 0, 2162825, 0, 0, 2162829, 0, 0, 2162830, 0, 0, 2162831, 0, 0, 2162832, 0, 0, 2162844, 0, 0, 2162845, 0, 0, 2162846, 0, 0, 2162847, 0, 0, 2162848, 0, 0, 2162849, 0, 0, 2162850, 0, 0, 2162851, 0, 0, 2162862, 0, 0, 2162876, 0, 0, 2228322, 0, 0, 2228336, 0, 0, 2228343, 0, 0, 2228358, 0, 0, 2228359, 0, 0, 2228360, 0, 0, 2228361, 0, 0, 2228365, 0, 0, 2228366, 0, 0, 2228367, 0, 0, 2228368, 0, 0, 2228380, 0, 0, 2228398, 0, 0, 2228412, 0, 0, 2293858, 0, 0, 2293872, 0, 0, 2293879, 0, 0, 2293894, 0, 0, 2293895, 0, 0, 2293896, 0, 0, 2293897, 0, 0, 2293901, 0, 0, 2293902, 0, 0, 2293903, 0, 0, 2293904, 0, 0, 2293916, 0, 0, 2293934, 0, 0, 2293948, 0, 0, 2359394, 0, 0, 2359408, 0, 0, 2359415, 0, 0, 2359437, 0, 0, 2359438, 0, 0, 2359439, 0, 0, 2359440, 0, 0, 2359452, 0, 0, 2359470, 0, 0, 2359477, 0, 0, 2359478, 0, 0, 2359479, 0, 0, 2359480, 0, 0, 2359481, 0, 0, 2359482, 0, 0, 2359483, 0, 0, 2359484, 0, 0, 2424930, 0, 0, 2424944, 0, 0, 2424951, 0, 0, 2424973, 0, 0, 2424974, 0, 0, 2424975, 0, 0, 2424976, 0, 0, 2424988, 0, 0, 2425006, 0, 0, 2425020, 0, 0, 2490466, 0, 0, 2490480, 0, 0, 2490487, 0, 0, 2490509, 0, 0, 2490510, 0, 0, 2490511, 0, 0, 2490512, 0, 0, 2490524, 0, 0, 2490542, 0, 0, 2490556, 0, 0, 2556002, 0, 0, 2556016, 0, 0, 2556023, 0, 0, 2556041, 0, 0, 2556042, 0, 0, 2556043, 0, 0, 2556044, 0, 0, 2556045, 0, 0, 2556046, 0, 0, 2556047, 0, 0, 2556048, 0, 0, 2556049, 0, 0, 2556050, 0, 0, 2556051, 0, 0, 2556060, 0, 0, 2556078, 0, 0, 2556092, 0, 0, 2621538, 0, 0, 2621552, 0, 0, 2621553, 0, 0, 2621554, 0, 0, 2621555, 0, 0, 2621556, 0, 0, 2621557, 0, 0, 2621558, 0, 0, 2621559, 0, 0, 2621577, 0, 0, 2621587, 0, 0, 2621596, 0, 0, 2621614, 0, 0, 2621628, 0, 0, 2687074, 0, 0, 2687113, 0, 0, 2687123, 0, 0, 2687132, 0, 0, 2687150, 0, 0, 2687151, 0, 0, 2687152, 0, 0, 2687153, 0, 0, 2687154, 0, 0, 2687155, 0, 0, 2687164, 0, 0, 2752610, 0, 0, 2752649, 0, 0, 2752659, 0, 0, 2752668, 0, 0, 2752686, 0, 0, 2752700, 0, 0, 2818146, 0, 0, 2818185, 0, 0, 2818195, 0, 0, 2818204, 0, 0, 2818222, 0, 0, 2818236, 0, 0, 2883682, 0, 0, 2883721, 0, 0, 2883731, 0, 0, 2883740, 0, 0, 2883758, 0, 0, 2883772, 0, 0, 2949218, 0, 0, 2949242, 0, 0, 2949243, 0, 0, 2949244, 0, 0, 2949245, 0, 0, 2949246, 0, 0, 2949247, 0, 0, 2949248, 0, 0, 2949249, 0, 0, 2949250, 0, 0, 2949251, 0, 0, 2949257, 0, 0, 2949267, 0, 0, 2949268, 0, 0, 2949269, 0, 0, 2949270, 0, 0, 2949271, 0, 0, 2949272, 0, 0, 2949273, 0, 0, 2949274, 0, 0, 2949275, 0, 0, 2949276, 0, 0, 2949294, 0, 0, 2949308, 0, 0, 3014754, 0, 0, 3014778, 0, 0, 3014787, 0, 0, 3014793, 0, 0, 3014830, 0, 0, 3014835, 0, 0, 3014836, 0, 0, 3014837, 0, 0, 3014838, 0, 0, 3014839, 0, 0, 3014840, 0, 0, 3014844, 0, 0, 3080290, 0, 0, 3080314, 0, 0, 3080323, 0, 0, 3080329, 0, 0, 3080366, 0, 0, 3080380, 0, 0, 3145826, 0, 0, 3145827, 0, 0, 3145828, 0, 0, 3145829, 0, 0, 3145830, 0, 0, 3145831, 0, 0, 3145832, 0, 0, 3145833, 0, 0, 3145834, 0, 0, 3145835, 0, 0, 3145836, 0, 0, 3145837, 0, 0, 3145838, 0, 0, 3145839, 0, 0, 3145840, 0, 0, 3145841, 0, 0, 3145842, 0, 0, 3145843, 0, 0, 3145844, 0, 0, 3145845, 0, 0, 3145846, 0, 0, 3145847, 0, 0, 3145848, 0, 0, 3145849, 0, 0, 3145850, 0, 0, 3145859, 0, 0, 3145860, 0, 0, 3145861, 0, 0, 3145862, 0, 0, 3145863, 0, 0, 3145864, 0, 0, 3145865, 0, 0, 3145902, 0, 0, 3145916, 0, 0, 3211438, 0, 0, 3211452, 0, 0, 3276974, 0, 0, 3276988, 0, 0, 3342510, 0, 0, 3342524, 0, 0, 3408046, 0, 0, 3408060, 0, 0, 3473582, 0, 0, 3473583, 0, 0, 3473584, 0, 0, 3473585, 0, 0, 3473586, 0, 0, 3473596, 0, 0, 3539118, 0, 0, 3539132, 0, 0, 3604654, 0, 0, 3604668, 0, 0, 3670190, 0, 0, 3670204, 0, 0, 3735726, 0, 0, 3735733, 0, 0, 3735734, 0, 0, 3735735, 0, 0, 3735736, 0, 0, 3735737, 0, 0, 3735738, 0, 0, 3735739, 0, 0, 3735740, 0, 0, 3801262, 0, 0, 3801276, 0, 0, 3866798, 0, 0, 3866812, 0, 0, 3932334, 0, 0, 3932348, 0, 0, 3997870, 0, 0, 3997884, 0, 0, 4063406, 0, 0, 4063420, 0, 0, 4128942, 0, 0, 4128943, 0, 0, 4128944, 0, 0, 4128945, 0, 0, 4128946, 0, 0, 4128947, 0, 0, 4128948, 0, 0, 4128949, 0, 0, 4128950, 0, 0, 4128951, 0, 0, 4128952, 0, 0, 4128956, 0, 0, 4194478, 0, 0, 4194492, 0, 0, 4260014, 0, 0, 4260028, 0, 0, 4325550, 0, 0, 4325564, 0, 0, 4391086, 0, 0, 4391087, 0, 0, 4391088, 0, 0, 4391089, 0, 0, 4391090, 0, 0, 4391091, 0, 0, 4391095, 0, 0, 4391096, 0, 0, 4391097, 0, 0, 4391098, 0, 0, 4391099, 0, 0, 4391100, 0, 0, 4456622, 0, 0, 4456636, 0, 0, 4522158, 0, 0, 4522172, 0, 0, 4587694, 0, 0, 4587708, 0, 0, 4653230, 0, 0, 4653244, 0, 0, 4718766, 0, 0, 4718780, 0, 0, 4784302, 0, 0, 4784316, 0, 0, 4849838, 0, 0, 4849852, 0, 0, 4915374, 0, 0, 4915388, 0, 0, 4980910, 0, 0, 4980924, 0, 0, 5046446, 0, 0, 5046460, 0, 0, 5111982, 0, 0, 5111996, 0, 0, 5177518, 0, 0, 5177532, 0, 0, 5243054, 0, 0, 5243068, 0, 0, 5308590, 0, 0, 5308604, 0, 0, 5374126, 0, 0, 5374140, 0, 0, 5439662, 0, 0, 5439676, 0, 0, 5505198, 0, 0, 5505212, 0, 0, 5570734, 0, 0, 5570748, 0, 0, 5636270, 0, 0, 5636284, 0, 0, 5701806, 0, 0, 5701820, 0, 0, 5767342, 0, 0, 5767356, 0, 0, 5832878, 0, 0, 5832892, 0, 0, 5898414, 0, 0, 5898428, 0, 0, 5963950, 0, 0, 5963964, 0, 0, 6029486, 0, 0, 6029500, 0, 0, 6095022, 0, 0, 6095036, 0, 0, 6160558, 0, 0, 6160572, 0, 0, 6226094, 0, 0, 6226108, 0, 0, 6291630, 0, 0, 6291644, 0, 0, 6357166, 0, 0, 6357180, 0, 0, 6422702, 0, 0, 6422716, 0, 0, 6488238, 0, 0, 6488252, 0, 0, 6553774, 0, 0, 6553788, 0, 0, 6619310, 0, 0, 6619324, 0, 0, 6684846, 0, 0, 6684860, 0, 0, 6750382, 0, 0, 6750396, 0, 0, 6815918, 0, 0, 6815932, 0, 0, 6881454, 0, 0, 6881468, 0, 0, 6946990, 0, 0, 6947004, 0, 0, 7012526, 0, 0, 7012540, 0, 0, 7078062, 0, 0, 7078076, 0, 0, 7143598, 0, 0, 7143612, 0, 0, 7209134, 0, 0, 7209148, 0, 0, 7274670, 0, 0, 7274684, 0, 0, 7340206, 0, 0, 7340220, 0, 0, 7405742, 0, 0, 7405756, 0, 0, 7471278, 0, 0, 7471292, 0, 0, 7536814, 0, 0, 7536828, 0, 0, 7602350, 0, 0, 7602364, 0, 0, 7667886, 0, 0, 7667900, 0, 0, 7733422, 0, 0, 7733436, 0, 0, 7798958, 0, 0, 7798972, 0, 0, 7864494, 0, 0, 7864508, 0, 0, 7930030, 0, 0, 7930044, 0, 0, 7995566, 0, 0, 7995580, 0, 0, 8061102, 0, 0, 8061116, 0, 0, 8126638, 0, 0, 8126652, 0, 0, 8192174, 0, 0, 8192188, 0, 0, 8257710, 0, 0, 8257724, 0, 0, 8323246, 0, 0, 8323260, 0, 0, 8388782, 0, 0, 8388796, 0, 0, 8454318, 0, 0, 8454332, 0, 0, 8519854, 0, 0, 8519868, 0, 0, 8585390, 0, 0, 8585404, 0, 0, 8650926, 0, 0, 8650940, 0, 0, 8716462, 0, 0, 8716476, 0, 0, 8781998, 0, 0, 8782012, 0, 0, 8847534, 0, 0, 8847548, 0, 0, 8913070, 0, 0, 8913084, 0, 0, 8978606, 0, 0, 8978620, 0, 0, 9044142, 0, 0, 9044156, 0, 0, 9109678, 0, 0, 9109692, 0, 0, 9175214, 0, 0, 9175228, 0, 0, 9240750, 0, 0, 9240764, 0, 0, 9306286, 0, 0, 9306300, 0, 0, 9371822, 0, 0, 9371836, 0, 0, 9437358, 0, 0, 9437372, 0, 0, 9502894, 0, 0, 9502908, 0, 0, 9568430, 0, 0, 9568444, 0, 0, 9633966, 0, 0, 9633980, 0, 0, 9699502, 0, 0, 9699516, 0, 0, 9765038, 0, 0, 9765052, 0, 0, 9830574, 0, 0, 9830588, 0, 0, 9896110, 0, 0, 9896124, 0, 0, 9961646, 0, 0, 9961660, 0, 0, 10027182, 0, 0, 10027196, 0, 0, 10092718, 0, 0, 10092732, 0, 0, 10158254, 0, 0, 10158268, 0, 0, 10223790, 0, 0, 10223804, 0, 0, 10289326, 0, 0, 10289340, 0, 0, 10354862, 0, 0, 10354876, 0, 0, 10420398, 0, 0, 10420412, 0, 0, 10485934, 0, 0, 10485948, 0, 0, 10551470, 0, 0, 10551484, 0, 0, 10617006, 0, 0, 10617020, 0, 0, 10682542, 0, 0, 10682556, 0, 0, 10748078, 0, 0, 10748092, 0, 0, 10813614, 0, 0, 10813628, 0, 0, 10879150, 0, 0, 10879164, 0, 0 )

[node name="Spikes" parent="." instance=ExtResource( 4 )]
collision_layer = 2
collision_mask = 2
tile_data = PoolIntArray( -1048506, 1, 0, -1048505, 1, 0, -1048504, 1, 0, -1048503, 1, 0, -1048502, 1, 0, -1048501, 1, 0, -1048500, 1, 0, -1048499, 1, 0, -1048498, 1, 0, -1048497, 1, 0, -1048496, 1, 0, -1048495, 1, 0, -1048494, 1, 0, -1048493, 1, 0, -1048492, 1, 0, -1048491, 1, 0, -1048490, 1, 0, -1048489, 1, 0, -1048488, 1, 0, -1048487, 1, 0, -1048486, 1, 0, -1048485, 1, 0, 1638562, 3, 0, 1704098, 3, 0, 1769634, 3, 0, 1835170, 3, 0, 1900706, 3, 0, 1900719, 1, 0, 1900720, 1, 0, 1900721, 1, 0, 1900722, 1, 0, 1900723, 1, 0, 1900724, 1, 0, 1900725, 1, 0, 1966242, 3, 0, 2031752, 1, 0, 2031753, 1, 0, 2031778, 3, 0, 2097290, 4, 0, 2097314, 3, 0, 2162814, 2, 0, 2162815, 2, 0, 2162816, 2, 0, 2162817, 2, 0, 2162818, 2, 0, 2162819, 2, 0, 2162820, 2, 0, 2162821, 2, 0, 2162826, 4, 0, 2228357, 3, 0, 2228362, 4, 0, 2293893, 3, 0, 2293898, 4, 0, 2293941, 1, 0, 2293942, 1, 0, 2293943, 1, 0, 2293944, 1, 0, 2293945, 1, 0, 2293946, 1, 0, 2293947, 1, 0, 2359430, 2, 0, 2359431, 2, 0, 2359432, 2, 0, 2359433, 2, 0, 2490505, 1, 0, 2490513, 1, 0, 2490514, 1, 0, 2490515, 1, 0, 2556040, 3, 0, 2621576, 3, 0, 2621615, 1, 0, 2621616, 1, 0, 2621617, 1, 0, 2621618, 1, 0, 2621619, 1, 0, 2687112, 3, 0, 2752648, 3, 0, 2818184, 3, 0, 2883706, 1, 0, 2883707, 1, 0, 2883714, 1, 0, 2883715, 1, 0, 2883720, 3, 0, 2883732, 1, 0, 2883733, 1, 0, 2883734, 1, 0, 2883735, 1, 0, 2883736, 1, 0, 2883737, 1, 0, 2883738, 1, 0, 2883739, 1, 0, 2949241, 3, 0, 2949252, 4, 0, 2949256, 3, 0, 2949299, 1, 0, 2949300, 1, 0, 2949301, 1, 0, 2949302, 1, 0, 2949303, 1, 0, 2949304, 1, 0, 3014777, 3, 0, 3014788, 4, 0, 3014792, 3, 0, 3080313, 3, 0, 3080324, 1, 0, 3080325, 1, 0, 3080326, 1, 0, 3080327, 1, 0, 3080328, 1, 0, 3408047, 1, 0, 3408048, 1, 0, 3408049, 1, 0, 3408050, 1, 0, 3670197, 1, 0, 3670198, 1, 0, 3670199, 1, 0, 3670200, 1, 0, 3670201, 1, 0, 3670202, 1, 0, 3670203, 1, 0, 4718773, 1, 0, 4718774, 1, 0, 4718775, 1, 0, 4718776, 1, 0, 4718777, 1, 0, 4718778, 1, 0, 4718779, 1, 0, 4784309, 2, 0, 4784310, 2, 0, 4784311, 2, 0, 4784312, 2, 0, 4784313, 2, 0, 4784314, 2, 0, 4784315, 2, 0, 5308591, 1, 0, 5308592, 1, 0, 5308593, 1, 0, 5308594, 1, 0, 5308595, 1, 0, 5308596, 1, 0, 5374127, 2, 0, 5374128, 2, 0, 5374129, 2, 0, 5374130, 2, 0, 5374131, 2, 0, 5374132, 2, 0, 6160559, 1, 0, 6160560, 1, 0, 6160561, 1, 0, 6160562, 1, 0, 6160563, 1, 0, 6160567, 1, 0, 6160568, 1, 0, 6160569, 1, 0, 6160570, 1, 0, 6160571, 1, 0, 6226095, 2, 0, 6226096, 2, 0, 6226097, 2, 0, 6226098, 2, 0, 6226099, 2, 0, 6226103, 2, 0, 6226104, 2, 0, 6226105, 2, 0, 6226106, 2, 0, 6226107, 2, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="Exit" type="Area2D" parent="."]
position = Vector2( 2915.33, 1583.57 )
gravity = 0.0
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( -9, 17 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="tween_all_completed" from="CanvasLayer/ColorRect/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
